Fix horizontal scrolling in Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
   font-family: "Lato";
   text-align: center;
   font-size: 16px;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
